--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <input type="text" id="screen" placeholder="0">
+        <input type="text" id="screen">
         <button class="digit">7</button>
         <button class="digit">8</button>
         <button class="digit">9</button>
